# mgsacs

./: CMakeLists.txt  README.md
CMakeModules/: FindBoost.cmake  FindMongo.cmake  FindOpenSSL.cmake  FindPoco.cmake  FindPocoCrypto.cmake  FindPocoData.cmake  FindPocoFoundation.cmake  FindPocoMySQL.cmake  FindPocoNet.cmake  FindPocoNetSSL.cmake  FindPocoUtil.cmake  FindPocoXML.cmake  FindThrift.cmake  kiwi.cmake
source/: CMakeLists.txt
source/include/: thrift_asio_transport.hpp
source/talkClient/: CMakeLists.txt  talkClient.cpp
source/talkServer/: CMakeLists.txt  talkServer.cpp
source/thrift/: CMakeLists.txt  talker.thrift
source/thrift/gen-cpp/: baseService.cpp  baseService.h  baseService_server.skeleton.cpp  talkClient.cpp  talkClient.h  talkClient_server.skeleton.cpp  talkServer.cpp  talkServer.h  talkServer_server.skeleton.cpp  talker_constants.cpp  talker_constants.h  talker_types.cpp  talker_types.h
