INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/kiwi.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/CheckDepends.cmake)


# Force out of source builds.
CHECK_OUT_OF_SOURCE()

cmake_minimum_required (VERSION 2.8)
PROJECT(AIServer CXX C)
SET(KIWI_VERSION_MAJOR 0)
SET(KIWI_VERSION_MINOR 1)
SET(KIWI_VERSION_PATCH 0)
SET(KIWI_VERSION "${KIWI_VERSION_MAJOR}.${KIWI_VERSION_MINOR}.${KIWI_VERSION_PATCH}")

KIWI_SETUP_BUILD()
KIWI_SETUP_BUILD_FLAGS()

#-----------------------------------------------------------------------------
# Redirect output files
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# DLL should be in the same directory as EXE under Windows
IF(WIN32)
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ELSE(WIN32)
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
ENDIF(WIN32)

IF(WIN32)
  IF(WITH_MFC)
    FIND_PACKAGE(MFC QUIET)
  ENDIF(WITH_MFC)
ENDIF(WIN32)

#-----------------------------------------------------------------------------
# Set default config options
#
KIWI_SETUP_DEFAULT_OPTIONS()
KIWI_SETUP_PREFIX_PATHS()
KIWI_SETUP_POCO_LIB_PATH()

IF(WITH_KIWI_SERVER)
  ADD_SUBDIRECTORY(source)
ENDIF(WITH_KIWI_SERVER)

IF(WIN32)
  IF(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(CMAKE_INSTALL_DEBUG_LIBRARIES TRUE)

  ELSE(NOT CMAKE_BUILD_TYPE STREQUAL "Release")

  ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
ENDIF(WIN32)

